header styled for mobile view at 360

--- a/src/index.html
+++ b/src/index.html
@@ -5,5 +5,8 @@
     <meta name="charset" "utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
-  <body><div id="root"></div></body>
+  <body>
+    <div id="root"></div>
+    <script src="https://use.fontawesome.com/3031fd3a76.js"></script>
+  </body>
 </html>
